--- a/vnc/roles/vnc/tasks/main.yml
+++ b/vnc/roles/vnc/tasks/main.yml
@@ -74,7 +74,7 @@
   when: check_output.failed
 
 - name: Start VNC service for vagrant on display :1
-  shell:
+  script:
     cmd: /bin/bash -c /Armory/vnc/startserver.sh vagrant
     chdir: /home/vagrant
     executable: /bin/bash
