--- a/vnc/roles/vnc/tasks/main.yml
+++ b/vnc/roles/vnc/tasks/main.yml
@@ -122,7 +122,7 @@
 #  when: check_output.failed
 
 - name: Start VNC service for student on display :3
-  shell: /Armory/vnc/startserver.sh
+  shell: /Armory/vnc/startserver.sh student
   become: yes
   become_user: "student"
   when: check_output.failed
@@ -143,7 +143,7 @@
 #  when: check_output.failed
 
 - name: Start VNC service for sysadmin on display :4
-  shell: /Armory/vnc/startserver.sh
+  shell: /Armory/vnc/startserver.sh sysadmin
   become: yes
   become_user: "sysadmin"
   when: check_output.failed
